src/objects/EDP_HWS_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for Product Serviceable Sales Item Schedule, Part Revision.</description>
    <fields>
        <fullName>Full_Load_Filter__c</fullName>
        <description>If the Field&apos;s value is String give the Filter as- FieldName=&apos; Value&apos; 
Otherwise give the filter as- FieldName=Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Load Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_Record_Fetch_Count__c</fullName>
        <label>Record Fetch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <label>HWS_EDP_Settings</label>
</CustomObject>